src/objects/UnhandledException__c.object
<CustomObject>
    <description>This is essentially an error logging object. When someone receives an exception in salesforce, an error code is referenced which will be a code to a record in this object. Additional information will be given here.</description>
    <fields>
        <fullName>AdditionalInfo__c</fullName>
        <label>Additional Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>The application where this occurred.</description>
        <label>Application</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <description>The line number in the object where the exception occurred.</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TypeName__c</fullName>
        <label>TypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Unhandled Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>AdditionalInfo__c</columns>
        <columns>Application__c</columns>
        <columns>LineNumber__c</columns>
        <columns>Message__c</columns>
        <columns>StackTrace__c</columns>
        <columns>TypeName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>UE-131002-22479</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FDP</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>AdditionalInfo__c</columns>
        <columns>Application__c</columns>
        <columns>LineNumber__c</columns>
        <columns>Message__c</columns>
        <columns>StackTrace__c</columns>
        <columns>TypeName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Flexible Degree Plan</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>UE-130531-11783</value>
        </filters>
        <label>FDP</label>
    </listViews>
    <nameField>
        <displayFormat>UE-{YYMMDD}-{0}</displayFormat>
        <label>Error Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unhandled Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>